--- a/clase1 Html/clase1.html
+++ b/clase1 Html/clase1.html
@@ -1,11 +1,17 @@
-<html>
-    <head>// sirve para dar informacion al servidor.
-        <title>Soy un titulo</title>
-    </head>
-    <body>
-        <Header>
-            <nav></nav>
-        </Header>
-
-    </body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta author="Eliana Osorio">
+    <title>Restaurante de la U</title>
+</head>
+<body>
+    <header>
+        <nav>
+            <h1>Bienvenido al restaurante de la U.</h1>
+        </nav>
+    </header>
+    
+</body>
 </html>
