feat: create first css design

--- a/semana2/clase3/index.html
+++ b/semana2/clase3/index.html
@@ -3,23 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/style.css" />
     <title>Restaurante Delicioso</title>
 </head>
 <body>
-
     <header id="cabecera">
-        <h1>Restaurante Delicioso</h1>
+        <div id="titulo">
+            <h1>Restaurante Delicioso</h1>
+        </div>
+        <div id="elMenu">
+        <nav id="menu">
+            <ul class="menus">
+                <li>Menú</li>
+                <li>Reservaciones</li>
+                <li>Contacto</li>
+            </ul>
+        </nav>
+    </div>
     </header>
-
-    <nav id="menu">
-        <ul class="menus">
-            <li>Menú</li>
-            <li>Reservaciones</li>
-            <li>Contacto</li>
-        </ul>
-    </nav>
     <div id="cards">
-        <section class="card">
+        <section id="descripcion">
             <h2>Nuestro Menú</h2>
             <p>
                 Descubre una deliciosa variedad de platillos en nuestro menú.
@@ -56,7 +59,7 @@
             </section>
         </div>
 
-        <section class="card">
+        <section class="info">
             <h2>Reservaciones</h2>
             <p>
                 ¿Quieres asegurar tu lugar en nuestro restaurante?
@@ -64,7 +67,7 @@
             </p>
         </section>
 
-        <section class="card">
+        <section class="info">
             <h2>Contacto</h2>
             <p>
                 Estamos ubicados en <strong>Dirección del Restaurante</strong>.
@@ -76,9 +79,9 @@
         <div id="footer1" class="final"><p>&copy; 2023 Restaurante Delicioso</p></div>
         <div id="footer2" class="final social-icons">
             <!-- Aqui agregamos las redes sociales y sus iconos-->
-            <a href="www.facebook.com/" target="_blank"><img src="./imagenes/ico-facebook.png" alt="log-facebook"></a>
-            <a href="www.Tiktok.com/" target="_blank"><img src="./imagenes/ico-tiktok.png" alt="logo-tiktok"></a>
-            <a href="www.instagram.com/" target="_blank"><img src="./imagenes/ico-instagram.png" alt="logo-instagram"></a>
+            <a href="https://www.facebook.com/" target="_blank"><img src="imagenes/ico-facebook.png" alt="log-facebook"></a>
+            <a href="https://www.Tiktok.com/" target="_blank"><img src="imagenes/ico-tiktok.png" alt="logo-tiktok"></a>
+            <a href="https://www.instagram.com/" target="_blank"><img src="imagenes/ico-instagram.png" alt="logo-instagram"></a>
         </div>
     </footer>
 
