--- a/semana2/clase3/index.html
+++ b/semana2/clase3/index.html
@@ -21,7 +21,7 @@
         </nav>
     </div>
     </header>
-    <div id="cards">
+    <div id="main">
         <section id="descripcion">
             <h2>Nuestro Menú</h2>
             <p>
@@ -58,22 +58,23 @@
                 <button class="Btn">Comprar</button>
             </section>
         </div>
+        <div id="info-Contact">
+            <section class="info">
+                <h2>Reservaciones</h2>
+                <p>
+                    ¿Quieres asegurar tu lugar en nuestro restaurante?
+                    Realiza una reservación y disfruta de una velada increíble.
+                </p>
+            </section>
 
-        <section class="info">
-            <h2>Reservaciones</h2>
-            <p>
-                ¿Quieres asegurar tu lugar en nuestro restaurante?
-                Realiza una reservación y disfruta de una velada increíble.
-            </p>
-        </section>
-
-        <section class="info">
-            <h2>Contacto</h2>
-            <p>
-                Estamos ubicados en <strong>Dirección del Restaurante</strong>.
-                Para consultas y reservas, llámanos al <strong>(123) 456-7890</strong>.
-            </p>
-        </section>
+            <section class="info">
+                <h2>Contacto</h2>
+                <p>
+                    Estamos ubicados en <strong>Dirección del Restaurante</strong>.
+                    Para consultas y reservas, llámanos al <strong>(123) 456-7890</strong>.
+                </p>
+            </section>
+        </div>
     </div>
     <footer>
         <div id="footer1" class="final"><p>&copy; 2023 Restaurante Delicioso</p></div>
