feat: Dom Manipulation

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
         <div id="Comidas">
             <section class="card">
                 <h2>Comida Italiana</h2>
-                <img src="./imagenes/italiana.jpeg" alt="Comida Italiana">
+                <img id="italiana-photo" src="./imagenes/italiana.jpeg" alt="Comida Italiana">
                 <p>
                     Deliciosos platillos italianos para satisfacer tus antojos.
                 </p>
@@ -55,7 +55,7 @@
                 <p>
                     Explora la riqueza de la comida asiática en cada bocado.
                 </p>
-                <button class="Btn">Comprar</button>
+                <button id="btnNoPress" class="Btn">Comprar</button>
             </section>
         </div>
         <div id="info-Contact">
@@ -85,6 +85,6 @@
             <a href="https://www.instagram.com/" target="_blank"><img src="imagenes/ico-instagram.png" alt="logo-instagram"></a>
         </div>
     </footer>
-
+    <script src="/javaScript/dom.js"></script>
 </body>
 </html>
